--- a/pdf-to-jpg-convert.html
+++ b/pdf-to-jpg-convert.html
@@ -376,25 +376,6 @@
     
 <script src="js/auth.js" type="module"></script>
 
-    <footer>
-        <div class="container footer-inner">
-            <div class="footer-company-links">
-                <span>Company</span>
-                <a href="index.html#about">About Us</a>
-                <a href="index.html#contact">Contact</a>
-                <a href="pricing.html">Pricing</a>
-                <a href="privacy-policy.html">Privacy Policy</a>
-                <a href="terms-of-service.html">Terms of Service</a>
-                <a href="dmca-en.html">DMCA</a>
-                <a href="blog.html">Blog</a>
-            </div>
-            <p class="footer-brand-line">&copy; easyjpgtopdf &mdash; Free PDF &amp; Image Tools for everyone. All rights reserved.</p>
-            <p class="footer-credits">
-                Thanks to Font Awesome, Google Fonts, jsPDF, pdf.js, pdf-lib, Mammoth, Tesseract.js, IMG.LY, Firebase, Unsplash photographers, and every open-source contributor powering this site.
-                <a href="attributions.html">See full acknowledgements</a>.
-            </p>
-        </div>
-    </footer>
     <script src="js/global-components.js"></script>
     <script>
     // Ensure header loads - multiple attempts to guarantee it works
@@ -451,7 +432,7 @@
     })();
     </script>
 
-    <section class="feedback-section" style="margin: 40px 0; padding: 40px; background: #f8f9ff; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+    <section class="feedback-section" style="margin: 40px 0; padding: 40px; background: #f8f9ff; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1); max-width: 1400px; margin-left: auto; margin-right: auto;">
         <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
             <i class="fas fa-comments" style="margin-right: 10px;"></i>
             Reviews & Comments
@@ -654,6 +635,6 @@
     }
     </script>
 
-        
+    <div id="global-footer-placeholder"></div>
 </body>
 </html>
