--- a/resume-maker.html
+++ b/resume-maker.html
@@ -1839,140 +1839,108 @@
                 styles += node.outerHTML;
             });
 
-            printWindow.document.write(`
-                <html>
-                    <head>
-                        <title>Resume Maker - Online Free Tool | easyjpgtopdf</title>
-    <meta name="description" content="Use our free Resume Maker tool online. Fast, secure, and easy to use.">
-    <meta name="keywords" content="resume-maker, resume maker, free resume-maker, online resume-maker">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://easyjpgtopdf.com/resume-maker.html">
-                        ${styles}
-                        <style>
-                            @page {
-                                size: A4;
-                                margin: 8mm 6mm 12mm;
-                            }
-
-                            html, body {
-                                height: auto;
-                                min-height: 100%;
-                                margin: 0;
-                                padding: 0;
-                                background: #ffffff;
-                                font-family: 'Poppins', Arial, sans-serif;
-                                -webkit-print-color-adjust: exact;
-                                print-color-adjust: exact;
-                            }
-
-                            .print-wrapper {
-                                width: 100%;
-                                max-width: 210mm;
-                                margin: 0 auto;
-                                padding: 0 4mm 12mm;
-                                box-sizing: border-box;
-                            }
-
-                            .resume-preview {
-                                box-shadow: none;
-                                border: none;
-                                width: 100%;
-                            }
-
-                            .resume-preview-header {
-                                display: flex;
-                                align-items: center;
-                                justify-content: space-between;
-                                gap: 20px;
-                                margin-bottom: 20px;
-                                padding-bottom: 20px;
-                                border-bottom: 2px solid #4361ee;
-                            }
-
-                            .resume-preview-photo {
-                                width: 110px;
-                                height: 110px;
-                                border-radius: 50%;
-                                overflow: hidden;
-                                flex-shrink: 0;
-                                border: 3px solid #4361ee;
-                                order: 2;
-                                flex: 0 0 110px;
-                                margin-left: auto;
-                                box-shadow: 0 4px 12px rgba(67, 97, 238, 0.2);
-                            }
-
-                            .resume-preview-photo img {
-                                width: 100%;
-                                height: 100%;
-                                object-fit: cover;
-                            }
-
-                            .resume-header-details {
-                                display: flex;
-                                flex-direction: column;
-                                gap: 6px;
-                                align-items: flex-start;
-                                flex: 1 1 auto;
-                                order: 1;
-                                min-width: 0;
-                            }
-
-                            .resume-preview-title {
-                                margin: 0;
-                            }
-
-                            #previewContact {
-                                font-size: 14px;
-                                color: #555f6d;
-                            }
-
-                            .resume-preview-footer {
-                                display: flex;
-                                justify-content: space-between;
-                                gap: 20px;
-                                margin-top: 32px;
-                                padding-top: 16px;
-                                border-top: 1px solid rgba(67, 97, 238, 0.2);
-                            }
-
-                            .resume-preview-footer .footer-left,
-                            .resume-preview-footer .footer-right {
-                                display: flex;
-                                flex-direction: column;
-                                gap: 6px;
-                            }
-
-                            .resume-preview-footer .footer-right {
-                                text-align: right;
-                            }
-                        </style>
-                                <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Resume Maker - Online Free Tool | easyjpgtopdf",
-      "description": "Use our free Resume Maker tool online. Fast, secure, and easy to use.",
-      "url": "https://easyjpgtopdf.com/resume-maker.html",
-      "inLanguage": "en-US",
-      "isPartOf": {
-        "@type": "WebSite",
-        "name": "easyjpgtopdf",
-        "url": "https://easyjpgtopdf.com"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "easyjpgtopdf",
-        "url": "https://easyjpgtopdf.com"
-      }
-    }
-    </script>
+            const printContent = `
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Resume Maker - Online Free Tool | easyjpgtopdf</title>
+    <meta charset="utf-8">
+    ${styles}
+    <style>
+        @page {
+            size: A4;
+            margin: 8mm 6mm 12mm;
+        }
+        html, body {
+            height: auto;
+            min-height: 100%;
+            margin: 0;
+            padding: 0;
+            background: #ffffff;
+            font-family: 'Poppins', Arial, sans-serif;
+            -webkit-print-color-adjust: exact;
+            print-color-adjust: exact;
+        }
+        .print-wrapper {
+            width: 100%;
+            max-width: 210mm;
+            margin: 0 auto;
+            padding: 0 4mm 12mm;
+            box-sizing: border-box;
+        }
+        .resume-preview {
+            box-shadow: none;
+            border: none;
+            width: 100%;
+        }
+        .resume-preview-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 20px;
+            margin-bottom: 20px;
+            padding-bottom: 20px;
+            border-bottom: 2px solid #4361ee;
+        }
+        .resume-preview-photo {
+            width: 110px;
+            height: 110px;
+            border-radius: 50%;
+            overflow: hidden;
+            flex-shrink: 0;
+            border: 3px solid #4361ee;
+            order: 2;
+            flex: 0 0 110px;
+            margin-left: auto;
+            box-shadow: 0 4px 12px rgba(67, 97, 238, 0.2);
+        }
+        .resume-preview-photo img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .resume-header-details {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+            align-items: flex-start;
+            flex: 1 1 auto;
+            order: 1;
+            min-width: 0;
+        }
+        .resume-preview-title {
+            margin: 0;
+        }
+        #previewContact {
+            font-size: 14px;
+            color: #555f6d;
+        }
+        .resume-preview-footer {
+            display: flex;
+            justify-content: space-between;
+            gap: 20px;
+            margin-top: 32px;
+            padding-top: 16px;
+            border-top: 1px solid rgba(67, 97, 238, 0.2);
+        }
+        .resume-preview-footer .footer-left,
+        .resume-preview-footer .footer-right {
+            display: flex;
+            flex-direction: column;
+            gap: 6px;
+        }
+        .resume-preview-footer .footer-right {
+            text-align: right;
+        }
+    </style>
 </head>
-                    <body>
-                        <div class="print-wrapper">${preview.outerHTML}</div>
-                    </body>
-                </html>
-            `);
+<body>
+    <div class="print-wrapper">${preview.outerHTML}</div>
+</body>
+</html>`;
+            printWindow.document.open();
+            printWindow.document.write(printContent);
+            printWindow.document.close();
             printWindow.document.close();
             printWindow.focus();
             printWindow.onload = () => {
@@ -2209,37 +2177,15 @@
                 </style>
             `;
 
-            const content = `
-                <html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns="http://www.w3.org/TR/REC-html40">
-                    <head><meta charset="utf-8"><title>Resume Maker - Online Free Tool | easyjpgtopdf</title>
-    <meta name="description" content="Use our free Resume Maker tool online. Fast, secure, and easy to use.">
-    <meta name="keywords" content="resume-maker, resume maker, free resume-maker, online resume-maker">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://easyjpgtopdf.com/resume-maker.html">${styles}    <link rel="stylesheet" href="css/header.css">
-            <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Resume Maker - Online Free Tool | easyjpgtopdf",
-      "description": "Use our free Resume Maker tool online. Fast, secure, and easy to use.",
-      "url": "https://easyjpgtopdf.com/resume-maker.html",
-      "inLanguage": "en-US",
-      "isPartOf": {
-        "@type": "WebSite",
-        "name": "easyjpgtopdf",
-        "url": "https://easyjpgtopdf.com"
-      },
-      "publisher": {
-        "@type": "Organization",
-        "name": "easyjpgtopdf",
-        "url": "https://easyjpgtopdf.com"
-      }
-    }
-    </script>
+            const content = `<!DOCTYPE html>
+<html xmlns:o="urn:schemas-microsoft-com:office:office" xmlns:w="urn:schemas-microsoft-com:office:word" xmlns="http://www.w3.org/TR/REC-html40">
+<head>
+    <meta charset="utf-8">
+    <title>Resume Maker - Online Free Tool | easyjpgtopdf</title>
+    ${styles}
 </head>
-                    <body>${preview.outerHTML}</body>
-                </html>
-            `;
+<body>${preview.outerHTML}</body>
+</html>`;
 
             const blob = new Blob(['\ufeff', content], { type: 'application/msword' });
             const url = URL.createObjectURL(blob);
