--- a/biodata-maker.html
+++ b/biodata-maker.html
@@ -967,6 +967,44 @@
         </div>
     </section>
 
+    <section class="related-tools" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
+            <i class="fas fa-tools" style="margin-right: 10px;"></i>
+            Related Tools
+        </h2>
+        <div class="tools-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
+
+            <a href="resume-maker.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-file-alt" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Resume Maker</h3>
+            </a>
+
+            <a href="marriage-card.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-heart" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Marriage Card Maker</h3>
+            </a>
+
+            <a href="Indian-style-Resume-generator.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-file-invoice" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Indian Style Resume</h3>
+            </a>
+
+            <a href="online_resume_maker.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-briefcase" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Online Resume Maker</h3>
+            </a>
+
+        </div>
+    </section>
+
     <section class="faq-section" style="margin: 40px 0; padding: 40px; background: #f8f9ff; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
         <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
             <i class="fas fa-question-circle" style="margin-right: 10px;"></i>
