--- a/crop-pdf.html
+++ b/crop-pdf.html
@@ -4,9 +4,16 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Crop PDF - Crop PDF Pages Online Free | PDF Cropping Tool</title>
-    <meta name="description" content="Crop PDF pages online for free. Remove unwanted margins and adjust page size. Precise PDF cropping tool.">
-    <meta name="keywords" content="crop pdf, crop pdf pages, pdf cropping tool, trim pdf, free pdf cropper, online pdf cropping">
+  <title>Free PDF Cropper Online - Crop PDF Pages, Remove Margins & Trim PDF | easyjpgtopdf</title>
+    <meta name="description" content="Free online PDF cropper tool. Crop PDF pages, remove unwanted margins, trim white space, and adjust page sizes. Instant preview, no registration required. Best PDF cropping tool for removing borders and margins.">
+    <meta name="keywords" content="crop pdf, crop pdf pages, pdf cropping tool, trim pdf, free pdf cropper, online pdf cropping, remove pdf margins, pdf trim tool, crop pdf online free, pdf margin remover, trim pdf pages, crop pdf pages online, pdf cropper free, crop pdf file, remove white space from pdf, pdf page cropper, crop pdf margins, trim pdf borders, pdf crop tool online, how to crop pdf">
+    <meta property="og:title" content="Free PDF Cropper Online - Crop PDF Pages & Remove Margins">
+    <meta property="og:description" content="Crop PDF pages online for free. Remove unwanted margins, trim white space, and adjust page sizes. Instant preview, no registration required.">
+    <meta property="og:url" content="https://easyjpgtopdf.com/crop-pdf.html">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Free PDF Cropper Online">
+    <meta name="twitter:description" content="Crop PDF pages, remove margins, and trim white space. Free online tool with instant preview.">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://easyjpgtopdf.com/crop-pdf.html">
 <link href="css/footer.css" rel="stylesheet"/>
@@ -674,10 +681,32 @@
                 <script type="application/ld+json">
     {
       "@context": "https://schema.org",
-      "@type": "WebPage",
-      "name": "Crop PDF - Crop PDF Pages Online Free | PDF Cropping Tool",
-      "description": "Crop PDF pages online for free. Remove unwanted margins and adjust page size. Precise PDF cropping tool.",
+      "@type": "WebApplication",
+      "name": "Free PDF Cropper Online - Crop PDF Pages & Remove Margins",
+      "description": "Free online PDF cropper tool. Crop PDF pages, remove unwanted margins, trim white space, and adjust page sizes. Instant preview, no registration required.",
       "url": "https://easyjpgtopdf.com/crop-pdf.html",
+      "applicationCategory": "UtilityApplication",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "4.8",
+        "ratingCount": "980"
+      },
+      "featureList": [
+        "Crop PDF pages online",
+        "Remove unwanted margins",
+        "Trim white space from PDF",
+        "Adjust page sizes",
+        "Instant preview",
+        "Apply crop to all pages",
+        "Free and secure",
+        "No registration required"
+      ],
       "inLanguage": "en-US",
       "isPartOf": {
         "@type": "WebSite",
@@ -710,22 +739,15 @@
     </nav>
 
 <main>
-        <h1>Crop PDF - Crop PDF Pages Online Free</h1>
+        <div class="hero">
+            <div class="container">
+                <h1>Free PDF Cropper - Crop PDF Pages Online | Remove Margins & Trim PDF</h1>
+                <h2 style="font-size: 1.2rem; color: rgba(255, 255, 255, 0.9); margin-top: 10px;">Crop PDF Pages, Remove Unwanted Margins, and Adjust Page Size - Free Online Tool</h2>
+                <p style="font-size: 1.05rem; max-width: 640px; color: rgba(255, 255, 255, 0.86); margin-top: 15px;">Trim unwanted margins from PDF pages, crop specific areas, and adjust page sizes. Free online PDF cropping tool with instant preview. No registration required.</p>
+            </div>
+        </div>
 <div class="container crop-app">
 <section aria-label="PDF upload and crop controls" class="panel-card">
-
-
-        <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
-        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
-            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
-                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">Home</a></li>
-                <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
-                <li><a href="login.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;" onmouseover="this.style.color='#4361ee'" onmouseout="this.style.color='#56607a'">Sign In</a></li>
-                <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
-                <li><a href="signup.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;" onmouseover="this.style.color='#4361ee'" onmouseout="this.style.color='#56607a'">Signup</a></li>
-            </ol>
-        </div>
-    </nav>
 
 <div class="drop-zone" id="dropZone" role="button" tabindex="0">
 <input accept="application/pdf" hidden="" id="pdfInput" type="file"/>
@@ -771,25 +793,17 @@
 </div>
 </section>
 <aside aria-label="Live crop preview" class="preview-card">
-
-
-        <nav aria-label="Breadcrumb" style="padding: 15px 0; background: #f8f9ff; border-bottom: 1px solid #e2e6ff;">
-        <div class="container" style="max-width: 1200px; margin: 0 auto; padding: 0 24px;">
-            <ol style="list-style: none; display: flex; flex-wrap: wrap; gap: 10px; margin: 0; padding: 0; align-items: center;">
-                <li><a href="index.html" style="color: #4361ee; text-decoration: none; font-weight: 500; transition: color 0.3s;" onmouseover="this.style.color='#3a0ca3'" onmouseout="this.style.color='#4361ee'">Home</a></li>
-                <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
-                <li><a href="login.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;" onmouseover="this.style.color='#4361ee'" onmouseout="this.style.color='#56607a'">Sign In</a></li>
-                <li><span style="margin: 0 8px; color: #9ca3af;">|</span></li>
-                <li><a href="signup.html" style="color: #56607a; font-weight: 500; text-decoration: none; transition: color 0.3s;" onmouseover="this.style.color='#4361ee'" onmouseout="this.style.color='#56607a'">Signup</a></li>
-            </ol>
-        </div>
-    </nav>
-
+<header>
+    <div class="preview-header-text">
+        <h2>Live Preview</h2>
+        <p class="helper-text">See your crop in real-time</p>
+    </div>
+</header>
 <div class="canvas-shell" id="canvasShell">
 <canvas aria-label="PDF page preview" id="previewCanvas"></canvas>
 <div aria-hidden="true" class="hidden" id="cropOverlay"></div>
 </div>
-<p class="preview-hint">Preview updates instantly as you tweak the margins. Download applies the crop to every page.</p>
+<p class="preview-hint" id="previewStatus">Upload a PDF to begin.</p>
 <section aria-label="Cropping tips" class="info-card">
 <h3><i class="fas fa-lightbulb"></i> Tips for perfect crops</h3>
 <ul>
@@ -869,6 +883,51 @@
                 </li>
 
             </ol>
+        </div>
+    </section>
+
+    <section class="related-tools" style="margin: 40px 0; padding: 40px; background: white; border-radius: 16px; box-shadow: 0 4px 12px rgba(0,0,0,0.1);">
+        <h2 style="font-size: 2rem; color: #4361ee; margin-bottom: 30px; text-align: center;">
+            <i class="fas fa-tools" style="margin-right: 10px;"></i>
+            Related Tools
+        </h2>
+        <div class="tools-grid" style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px;">
+
+            <a href="merge-pdf.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-file-pdf" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Merge PDF</h3>
+            </a>
+
+            <a href="split-pdf.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-cut" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Split PDF</h3>
+            </a>
+
+            <a href="compress-pdf.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-compress" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Compress PDF</h3>
+            </a>
+
+            <a href="edit-pdf.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-edit" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Edit PDF</h3>
+            </a>
+
+            <a href="watermark-pdf.html" style="display: block; padding: 20px; background: #f8f9ff; border-radius: 12px; text-decoration: none; text-align: center; transition: transform 0.3s, box-shadow 0.3s; border: 2px solid transparent;" 
+               onmouseover="this.style.transform='translateY(-5px)'; this.style.boxShadow='0 8px 16px rgba(67,97,238,0.2)'; this.style.borderColor='#4361ee';"
+               onmouseout="this.style.transform='translateY(0)'; this.style.boxShadow='none'; this.style.borderColor='transparent';">
+                <i class="fas fa-water" style="font-size: 2rem; color: #4361ee; margin-bottom: 10px;"></i>
+                <h3 style="font-size: 1.1rem; color: #0b1630; margin: 0;">Watermark PDF</h3>
+            </a>
+
         </div>
     </section>
 
@@ -1223,7 +1282,7 @@
       const previewStatus = document.getElementById('previewStatus');
       const downloadButton = document.getElementById('downloadButton');
       const resetButton = document.getElementById('resetButton');
-      const reuploadButton = document.getElementById('reuploadButton');
+      const reuploadButton = document.getElementById('reuploadButton') || null;
       const marginLabels = {
         top: document.querySelector('[data-margin-label="top"]'),
         bottom: document.querySelector('[data-margin-label="bottom"]'),
@@ -1769,9 +1828,11 @@
         }
       });
 
-      reuploadButton.addEventListener('click', () => {
-        resetWorkspace();
-      });
+      if (reuploadButton) {
+        reuploadButton.addEventListener('click', () => {
+          resetWorkspace();
+        });
+      }
 
       pageSelect.addEventListener('change', (event) => {
         const value = Number(event.target.value) || 1;
